--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     border-radius: 25px;
     font-weight: 600;
     letter-spacing: 2px;
-    box-shadow: 0px 5px 10px #000;" href="{{ url_for('first') }}"> жми, жми, пыж пыж </a>
+    box-shadow: 0px 5px 10px #000;" href="https://qurokaa.github.io/s_dnem_rojdeniya-jmi/"> жми, жми, пыж пыж </a>
 </body>
 </html>
